# clas12-offline-software

./: .classpath  .codecov.yml  .gitignore  .gitignore~  .gitmodules  .mailmap  .project  .travis.yml  CMakeLists.txt  README.md  build-coatjava.csh  build-coatjava.sh  build-javadocs.sh  build.gradle  build.sh  maven-settings.xml  pom.xml  proton_80MeV.hipo  spotbugs-exclude.xml  version-bump.sh
.github/workflows/: maven.yml
JOGL/: .project
apache/: .classpath  .project
bCNU/: build.xml  pom.xml
bin.old/: analyzer  calibration  clara-rec  convertor  ddr  debug_ec.sh  decoder-debugger  decoder3  eb-monitor  ec-monitor  gemc-evio  grid  hipo-writer  hipo3utils  pion  rec-monitor  studio  update  x-client  x-client-evio  x-server
ced/: ced.sh  pom.xml
ced/data/: smallAsciiMap.txt.REMOVED.git-id
clas-detector/: pom.xml
clas-geometry/: pom.xml
clas-io/: pom.xml
clas-physics/: pom.xml
clas-reco/: pom.xml
clas-utils/: pom.xml
clas12detector-eb/: README.md
clas12detector-ec/: README.md
clas12detector-ft/: README.md
clas12detector-ft/reco/: pom.xml
clas12rec/: build.sh  pom.xml
clasJlib/: build.xml
clasrec-ltcc/: .gitignore
cnuphys/: deployDistribution.sh  pom.xml
cnuphysNew/: pom.xml
coat-lib/: pom.xml
common-tools/: .gitignore  README.md  build.sh  pom.xml
docs/: index.html
jsonToJava/: .project
magfield/: pom.xml
parent/: pom.xml
reco/: build.sh  pom.xml
reconstruction/: .gitignore  pom.xml
snr/: pom.xml
splot/: .classpath  pom.xml
swimmer/: build.xml  pom.xml
tof/: README.md
validation/: README.md  etc
(+6845 files in other folders)
